kubernetes/apps/vaultwarden/vaultwarden/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  labels:
    name: vaultwarden-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: external.gs-farm.net
    kubernetes.io/ingress.class: external
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - "kumar.gs-farm.net"
      secretName: vaultwarden-secret
  rules:
  - host: kumar.gs-farm.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
      - pathType: Prefix
        path: "/notifications/hub/negotiate"
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
      - pathType: Prefix
        path: "/notifications/hub"
        backend:
          service:
            name: vaultwarden
            port:
              number: 3012
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress-internal
  namespace: vaultwarden
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - "kumar.gs-farm.net"
      secretName: vaultwarden-secret
  rules:
    - host: kumar.gs-farm.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
